<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="hello">Hello World, MainActivity!</string>
    <string name="app_name">jp.pizzafactory.sumida.eposter</string>
    <string name="view_poster">このポスターを見る</string>
    <string name="home">一覧へ</string>

    <style name="CodeFont">
        <item name="android:layout_width">wrap_content</item>
        <item name="android:layout_height">wrap_content</item>
        <item name="android:textColor">#000</item>
        <item name="android:textSize">26sp</item>
    </style>
        <string name="backward">backward</string>
        <string name="back">back</string>
        <string name="next">Next</string>

    <string name="version">1.2</string>
    <string name="no_media_warning">Storage media not present</string>
    <string name="no_media_hint">Sharing the storage media with a PC can make it inaccessible</string>
    <string name="cancel">Cancel</string>
    <string name="search_backwards">Search backwards</string>
    <string name="search_forwards">Search forwards</string>
    <string name="search_document">Search document</string>
    <string name="picker_title_App_Ver_Dir">%1$s %2$s: %3$s</string>
    <string name="outline_title">Table of Contents</string>
    <string name="enter_password">Enter password</string>
    <string name="text_not_found">Text not found</string>
    <string name="searching_">Searching&#8230;</string>
    <string name="toggle_links">Highlight and enable links</string>
    <string name="no_further_occurrences_found">No further occurrences found</string>
    <string name="select">Select</string>
    <string name="search">Search</string>
    <string name="copy">Copy</string>
    <string name="strike_out">Strike-out</string>
    <string name="delete">Delete</string>
    <string name="highlight">Highlight</string>
    <string name="underline">Underline</string>
    <string name="edit_annotations">Edit annotations</string>
    <string name="ink">Ink</string>
    <string name="save">Save</string>
    <string name="print">Print</string>
    <string name="dismiss">Dismiss</string>
    <string name="parent_directory">[Up one level]</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="entering_reflow_mode">Entering reflow mode</string>
    <string name="leaving_reflow_mode">Leaving reflow mode</string>
    <string name="print_failed">Print failed</string>
    <string name="select_text">Select text</string>
    <string name="copied_to_clipboard">Copied to clipboard</string>
    <string name="no_text_selected">No text selected</string>
    <string name="draw_annotation">Draw annotation</string>
    <string name="nothing_to_save">Nothing to save</string>
    <string name="document_has_changes_save_them_">Document has changes. Save them?</string>
    <string name="cannot_open_document">Cannot open document</string>
    <string name="cannot_open_document_Reason">Cannot open document: %1$s</string>
    <string name="cannot_open_file_Path">Cannot open file: %1$s</string>
    <string name="cannot_open_buffer">Cannot open buffer</string>
    <string name="fill_out_text_field">Fill out text field</string>
    <string name="okay">Okay</string>
    <string name="choose_value">Choose value</string>
    <string name="not_supported">Not supported</string>
    <string name="copy_text_to_the_clipboard">Copy text to the clipboard</string>
    <string name="more">More</string>
    <string name="accept">Accept</string>
    <string name="copy_text">copy text</string>
    <string name="format_currently_not_supported">Format currently not supported</string>
    <string name="back_to_home">Back to home</string>
    <string name="image">Image</string>
    <string name="poster_thumbnail">Poster thumbnail</string>
    <string name="swipe_to_left">Swipe to left</string>
    <string name="swipe_to_right">Swipe to right</string>

    <string name="enable0">enable0</string>
    <string name="enable1">enable1</string>
    <string name="enable2">enable2</string>
    <string name="enable3">enable3</string>
    <string name="enable4">enable4</string>
    <string name="enable5">enable5</string>
    <string name="enable6">enable6</string>
    <string name="enable7">enable7</string>
    <string name="enable8">enable8</string>
    <string name="enable9">enable9</string>
    <string name="enable10">enable10</string>
    <string name="enable11">enable11</string>
    <string name="enable12">enable12</string>
    <string name="enable13">enable13</string>
    <string name="enable14">enable14</string>
    <string name="enable15">enable15</string>
    <string name="enable16">enable16</string>
    <string name="enable17">enable17</string>
    <string name="enable18">enable18</string>
    <string name="enable19">enable19</string>
    <string name="enable20">enable20</string>
    <string name="enable21">enable21</string>
    <string name="enable22">enable22</string>
    <string name="enable23">enable23</string>
</resources>
