<?xml version="1.0"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >

    <PreferenceCategory android:title="General" >
        <EditTextPreference
            android:defaultValue="5000"
            android:inputType="number"
            android:key="span"
            android:title="Switch span" />
    </PreferenceCategory>
    <PreferenceCategory android:title="Service Time" >
        <CheckBoxPreference
            android:defaultValue="true"
            android:key="@string/enable0"
            android:title="00:00 - 00:59" />
        <CheckBoxPreference
            android:defaultValue="true"
            android:key="@string/enable1"
            android:title="01:00 - 01:59" />
        <CheckBoxPreference
            android:defaultValue="true"
            android:key="@string/enable2"
            android:title="02:00 - 02:59" />
        <CheckBoxPreference
            android:defaultValue="true"
            android:key="@string/enable3"
            android:title="03:00 - 03:59" />
        <CheckBoxPreference
            android:defaultValue="true"
            android:key="@string/enable4"
            android:title="04:00 - 04:59" />
        <CheckBoxPreference
            android:defaultValue="true"
            android:key="@string/enable5"
            android:title="05:00 - 05:59" />
        <CheckBoxPreference
            android:defaultValue="true"
            android:key="@string/enable6"
            android:title="06:00 - 06:59" />
        <CheckBoxPreference
            android:defaultValue="true"
            android:key="@string/enable7"
            android:title="07:00 - 07:59" />
        <CheckBoxPreference
            android:defaultValue="true"
            android:key="@string/enable8"
            android:title="08:00 - 08:59" />
        <CheckBoxPreference
            android:defaultValue="true"
            android:key="@string/enable9"
            android:title="09:00 - 09:59" />
        <CheckBoxPreference
            android:defaultValue="true"
            android:key="@string/enable10"
            android:title="10:00 - 10:59" />
        <CheckBoxPreference
            android:defaultValue="true"
            android:key="@string/enable11"
            android:title="11:00 - 11:59" />
        <CheckBoxPreference
            android:defaultValue="true"
            android:key="@string/enable12"
            android:title="12:00 - 12:59" />
        <CheckBoxPreference
            android:defaultValue="true"
            android:key="@string/enable13"
            android:title="13:00 - 13:59" />
        <CheckBoxPreference
            android:defaultValue="true"
            android:key="@string/enable14"
            android:title="14:00 - 14:59" />
        <CheckBoxPreference
            android:defaultValue="true"
            android:key="@string/enable15"
            android:title="15:00 - 15:59" />
        <CheckBoxPreference
            android:defaultValue="true"
            android:key="@string/enable16"
            android:title="16:00 - 16:59" />
        <CheckBoxPreference
            android:defaultValue="true"
            android:key="@string/enable17"
            android:title="17:00 - 17:59" />
        <CheckBoxPreference
            android:defaultValue="true"
            android:key="@string/enable18"
            android:title="18:00 - 18:59" />
        <CheckBoxPreference
            android:defaultValue="true"
            android:key="@string/enable19"
            android:title="19:00 - 19:59" />
        <CheckBoxPreference
            android:defaultValue="true"
            android:key="@string/enable20"
            android:title="20:00 - 20:59" />
        <CheckBoxPreference
            android:defaultValue="true"
            android:key="@string/enable21"
            android:title="21:00 - 21:59" />
        <CheckBoxPreference
            android:defaultValue="true"
            android:key="@string/enable22"
            android:title="22:00 - 22:59" />
        <CheckBoxPreference
            android:defaultValue="true"
            android:key="@string/enable23"
            android:title="23:00 - 23:59" />
    </PreferenceCategory>

</PreferenceScreen>