<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="0dip"
        android:layout_weight="1" >

        <com.jess.ui.TwoWayGridView
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:id="@+id/thumbnail_grid"
            android:layout_width="match_parent"
            android:layout_height="fill_parent"
            android:background="#000000"
            app:cacheColorHint="#000000"
            app:columnWidth="0dp"
            app:gravity="left"
            app:horizontalSpacing="10dp"
            app:numColumns="auto_fit"
            app:numRows="auto_fit"
            app:rowHeight="160dp"
            app:scrollDirectionLandscape="vertical"
            app:scrollDirectionPortrait="horizontal"
            app:stretchMode="none"
            app:verticalSpacing="10dp" >
        </com.jess.ui.TwoWayGridView>

        <ImageView
            android:id="@+id/swipe_left"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center|left"
            android:alpha="70"
            android:contentDescription="@string/swipe_to_right"
            android:src="@drawable/swipe_s_left" />

        <ImageView
            android:id="@+id/swipe_right"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right|center"
            android:alpha="70"
            android:contentDescription="@string/swipe_to_left"
            android:src="@drawable/swipe_right" />

    </FrameLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center" >

        <ImageView
            android:id="@+id/home"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/back_to_home"
            android:src="@drawable/home_icon" />
    </LinearLayout>

</LinearLayout>